<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:background="@color/white"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="18dp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:layout_gravity="center"
                android:fontFamily="@font/pbold"
                android:textColor="@color/black"
                android:id="@+id/tv_item_name"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/grs1"
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/garis1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="32dp">

                <!--    untuk indikasi-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_indikasi"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_item_indikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    tools:text="@string/indikasi"/>

                <!--    untuk deskripsi-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_desc"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_item_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    android:textColor="@color/black"
                    tools:text="@string/desc"
                    android:layout_marginBottom="10dp"/>

                <!--    untuk kategori-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_kategori"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_item_kategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    android:textColor="@color/black"
                    tools:text="@string/tv_kategori"
                    android:layout_marginBottom="10dp"/>

                <!--    untuk komposisi-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_komposisi"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_item_komposisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    tools:text="@string/komposisi"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <!--    untuk dosis-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dosis"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_item_dosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    tools:text="@string/dosis"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <!--    untuk aturan pakai-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_aturan"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/tv_item_aturan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    tools:text="@string/aturan"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <!--    untuk kemasan-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_kemasan"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_item_kemasan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    tools:text="@string/kemasan"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <!--    untuk perhatian-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_perhatian"
                    android:fontFamily="@font/pbold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_item_perhatian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/pregular"
                    tools:text="@string/perhatian"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>